added is hidden

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <section class="splash-header">
         <h1>Effective Solutions for Your Business</h1>
         <button type="button" class="data-modal-open">Order Service</button>
-        <div class="data-modal">
+        <div class="data-modal is-hidden">
           <div class="modal-content">
             <span class="data-modal-close">&times;</span>
           </div>
